# insight-paid

./: CMakeLists.txt  common.cpp  common.hpp  features.cpp  features.hpp  main.cpp  miscellaneous.cpp  natives.hpp  player.cpp  script.cpp  script.hpp  script_utility.hpp  settings.cpp  spawner.cpp  teleport.cpp  version.cpp.in  version.hpp  world.cpp
Appdata Folder/Insight/: cheat.hotkeys
features/: features_utility.hpp  null_feature.cpp
features/misc/: bypass_restricted_areas.cpp  camera_zoom.cpp  disables.cpp  old_camera.cpp  potato_pc_mode.cpp  see_through_walls.cpp  snow_trails.cpp  vfx.cpp
features/network/: claim_bounty.cpp  matchmaking_region.cpp  network_get_join_n_leave_players.cpp  no_idle_kick.cpp  off_radar.cpp  protection_spectating.cpp  quick_transitions.cpp  rank_loop.cpp  reveal_off_the_radar.cpp  seemless_transition.cpp  show_invisible_players.cpp  stats_spoofing.cpp
features/script_patching/: script_patches.hpp
features/teleports/: auto_teleport.cpp  teleporting_ability.cpp
features/utility/: projectile_manager.hpp
features/world/: angry_planes.cpp  anti_aircraft_missle.cpp  black_hole.cpp  cum_mode.cpp  jump_around_mode.cpp  magnet_mode.cpp  meteorite_shower.cpp  nuke_waypoint.cpp  riot.cpp  sentry_weapon.cpp  split_water.cpp  strike_mode.cpp  time.cpp
libs/: SecureEngineCustomVMs.h  libcurl_a.lib
manager/: abstract.h  manager.cpp  manager.h  types.h
network/: network.cpp  recovery.cpp  spoofing.cpp
network/player/: all_players.cpp  n_player.cpp  n_removal.cpp  n_social.cpp  n_teleport.cpp  n_vehicle.cpp  n_weapon.cpp
network/recovery/: money.cpp  rank .cpp  statss.cpp
network/spoofing/: host_token.cpp  rotation.cpp  stats.cpp
scripted_globals/: requests_menu.cpp  scr_globals.hpp  services.cpp  set_player_stat.cpp
self/: self.cpp  self.hpp
tasks/: entities.cpp  get_keyboard_input.cpp  globals.cpp  net.cpp  visuals.cpp
util/: benchmark.h  caller.hpp  custom_text.hpp  file_manager.hpp  gta_util.hpp  jitasm.h  logger.hpp  misc.hpp  model_info.hpp  scripts.hpp  timer.hpp
util/config/: config.cpp  config.hpp
util/discord/: Discord_Integration.hpp  Discord_RPC.hpp  Discord_Register.hpp
util/exceptions/: disassembler.hpp  handler.cpp  handler.hpp
vehicle/: los_santos_customs.cpp  vehicle.cpp
weapon/: weapon.cpp
weapons/: weapons.cpp  weapons.hpp
world/: world_subs.cpp
(+107 files in other folders)
